--- a/src/sass/pages/_catalog.scss
+++ b/src/sass/pages/_catalog.scss
@@ -124,6 +124,10 @@
 			margin-bottom: $gutter/2;
 		}
 	} //.catalog__changer
+
+	&__seoblock{
+		margin-left: 280px;
+	}//.catalog__seoblock
 } //.catalog
 
 .catalog-filter {
