--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -25,10 +25,10 @@
 	<link rel="stylesheet" media="all" href="css/app.css">
 </head>
 <body class="loading" itemscope="itemscope" itemtype="http://schema.org/WebPage">
-	
+
 	<!-- begin wrapper -->
 	<div class="wrapper {{ wrapperClass }}">
-		{% include "partials/_header.html" %}
+		{% include "partials/header/_header.html" %}
 		{% block content %}{% endblock %}
 		{% include "partials/_footer.html" %}
 	</div>
