--- a/src/templates/partials/_footer.html
+++ b/src/templates/partials/_footer.html
@@ -84,7 +84,9 @@
 						</li>
 					</ul>
 
-					{{item.social('footer__social')}}
+					<div class="footer__social">
+						{% include "partials/components/_social.html" %}
+					</div>
 
 				</div>
 			</div>
