--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -38,7 +38,7 @@
 								<span class="section-header__text">или войдите через</span>
 							</div>
 
-							{{item.social('form__social')}}
+							{% include "partials/components/_social.html" %}
 
 							<div class="form-success">
 								<div class="form-success__center">
