--- a/src/sass/pages/_catalog.scss
+++ b/src/sass/pages/_catalog.scss
@@ -38,7 +38,7 @@
 	&__content {
 		flex: 1;
 		margin-left: auto;
-		margin-top: 30px;
+		margin-top: 29px;
 		position: relative;
 		@include respond-to(sm) {
 			width: 100%;
@@ -125,9 +125,11 @@
 		}
 	} //.catalog__changer
 
-	&__seoblock{
+	&__seoblock {
 		margin-left: 280px;
-	}//.catalog__seoblock
+		@include respond-to(sm) {
+		}
+	} //.catalog__seoblock
 } //.catalog
 
 .catalog-filter {
@@ -349,7 +351,7 @@
 			font-size: 13px;
 			color: $gray--light;
 		}
-		input{
+		input {
 			display: inline-block;
 			padding: 2px 10px 4px;
 			vertical-align: middle;
@@ -995,7 +997,7 @@
 		overflow: hidden;
 		position: absolute;
 		top: 9px;
-		left: 8px;
+		left: 9px;
 		right: 8px;
 		bottom: 0;
 		height: 345px;
@@ -1020,7 +1022,31 @@
 		display: flex;
 		align-items: flex-end;
 
+		&::after {
+			content: '';
+			display: block;
+			width: 100%;
+			height: 2px;
+			margin: 0 3px 4px;
+			background-color: rgba(232,232,232, .8);
+			transition: backgroud-color .3s;
+		}
+
+		&:first-child {
+			&::after{
+				margin-left: 6px;
+			}
+		}
+		&:last-child {
+			&::after{
+				margin-right: 6px;
+			}
+		}
+
 		&:hover {
+			&::after{
+				background-color: $color-accent;
+			}
 			.product-slider {
 				&__image {
 					opacity: 1;
