bix tamplate fix

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -1,4 +1,10 @@
-//CUSTOM LIBS
+@import "../libs/fontawesome5.css";
+@import "../libs/select2/select2.css";
+@import "../libs/nouislider/nouislider.css";
+@import "../libs/slick/slick-theme";
+@import "../libs/slick/slick";
+@import "../libs/modal/modal";
+@import "../libs/smart-grid";
 
 //noUiSlider
 .noUi-horizontal {
