--- a/src/templates/lk-favorits.html
+++ b/src/templates/lk-favorits.html
@@ -15,7 +15,7 @@ wrapperClass: page-lk
 
         <div class="lk__wrap">
 
-            {{ item.lkSidebar() }}
+			{% include "partials/lk/_lk-sidebar.html" %}
 
             <!-- begin lk__content -->
             <div class="lk__content stiky-content">
@@ -23,7 +23,7 @@ wrapperClass: page-lk
                 <!-- begin product-item -->
                 <div class="product-item__wrap">
                     {% for i in range(0, 10) %}
-                        {{ item.productItem() }}
+						{% include "partials/components/_product.html" %}
                     {% endfor %}
                 </div>
                 <!-- end product-item -->
