--- a/src/templates/partials/_items.html
+++ b/src/templates/partials/_items.html
@@ -10,10 +10,12 @@
 {% macro btn(title, class) %}
 <button class="button {{ class }}">{{ title }}</button>
 {% endmacro %}
+<!-- item.btn('Купить', 'button--transparent') -->
 
 {% macro btnLink(title, class, href="#") %}
 <a {{ href }} class="button {{ class }}">{{ title }}</a>
 {% endmacro %}
+<!-- item.btn('Купить', 'button--transparent') -->
 
 {% macro checkbox(title, class, checked) %}
 <label class="checkbox {{class}}">
@@ -40,170 +42,3 @@
 </button>
 {% endmacro %}
 <!-- item.button('Пригласить', 'invite__btn') -->
-
-{% macro policy(class) %}
-<div class="policy js-policy {{class}}">
-	Заполняя форму, Вы соглашаетесь на обработку персональных данных в соответствии с
-	<a href="#" target="_blank">Условиями пользовательского соглашения</a>.
-</div>
-{% endmacro %}
-
-{% macro starRating() %}
-<div class="star-rating">
-	<div class="star-rating__wrap">
-		<input class="star-rating__input" id="star-rating-5" type="radio" name="rating" value="5">
-		<label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-5" title="5 из 5"></label>
-		<input class="star-rating__input" id="star-rating-4" type="radio" name="rating" value="4">
-		<label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-4" title="4 из 5"></label>
-		<input class="star-rating__input" id="star-rating-3" type="radio" name="rating" value="3">
-		<label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-3" title="3 из 5"></label>
-		<input class="star-rating__input" id="star-rating-2" type="radio" name="rating" value="2">
-		<label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-2" title="2 из 5"></label>
-		<input class="star-rating__input" id="star-rating-1" type="radio" name="rating" value="1">
-		<label class="star-rating__ico fa fa-star-o fa-lg" for="star-rating-1" title="1 из 5"></label>
-	</div>
-</div>
-{% endmacro %}
-
-{% macro productItem(class) %}
-<a href="#" class="product-item js-product-item" itemscope itemtype="http://schema.org/Product">
-
-	<span class="product-item__badge sale">-32%</span>
-	<span class="product-item__badge new">New</span>
-	<span class="product-item__badge hit">Хит</span>
-
-	<div class="product-item__img">
-		<img class="product-item__image" src="img/products/atlas/1.png" alt="Атлас дюпон" itemprop="image">
-		<button class="button-icon button-icon--fav js-button-icon--fav product-item__fav"></button>
-	</div>
-
-	<!-- begin product-slider -->
-	<div class="product-slider">
-		<ul class="product-slider__list">
-
-			<li class="product-slider__item">
-			   <div class="product-slider__image" style="background-image: url('img/products/atlas/1.png');"></div>
-			</li>
-
-			<li class="product-slider__item">
-			   <div class="product-slider__image" style="background-image: url('img/products/atlas/2.png');"></div>
-			</li>
-
-			<li class="product-slider__item">
-			   <div class="product-slider__image" data-srcpath="" style="background-image: url('img/products/atlas/3.png');"></div>
-			</li>
-
-			<li class="product-slider__item">
-			   <div class="product-slider__image" data-srcpath="" style="background-image: url('img/products/atlas/4.png');"></div>
-			</li>
-
-			<li class="product-slider__item product-slider__item--last">
-				<div class="product-slider__image" data-srcpath="" style="background-image: url('img/products/atlas/3.png');"></div>
-				<div class="product-slider__more">
-					Ещё<br>5 цветов
-				</div>
-			</li>
-		</ul>
-	</div><!-- end product-slider -->
-
-	<div class="product-item__desc">
-		<div class="product-item__box">
-			<h5 class="h5 product-item__title" itemprop="name">Атлас дюпон
-				<span>white</span>
-			</h5>
-			<span class="product-item__articul">ам07</span>
-		</div>
-		<div class="product-item__box">
-			<div class="product-item__price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-				<meta itemprop="price" content="300.00">
-				<meta itemprop="priceCurrency" content="RUB" /> 300
-				<i class="fal fa-ruble-sign"></i>
-			</div>
-			<div class="product-item__color-count color-count">18 цветов</div>
-		</div>
-		<div class="product-item__more">
-			<div class="product-item__color color">
-				<ul class="color__list">
-					<li class="color__item js-color-item" data-color="img/products/atlas/1.png">
-						<img class="color__img" src="img/products/atlas/colors/1.png" alt="alt">
-					</li>
-					<li class="color__item js-color-item" data-color="img/products/atlas/2.png">
-						<img class="color__img" src="img/products/atlas/colors/2.png" alt="alt">
-					</li>
-					<li class="color__item js-color-item" data-color="img/products/atlas/3.png">
-						<img class="color__img" src="img/products/atlas/colors/3.png" alt="alt">
-					</li>
-					<li class="color__item js-color-item" data-color="img/products/atlas/4.png">
-						<img class="color__img" src="img/products/atlas/colors/4.png" alt="alt">
-					</li>
-				</ul>
-			</div>
-
-			<button class="button button--transparent button--muted product-item__btn" onclick= "pushUp();">Добавить в корзину</button>
-
-			<button class="button button--transparent button--default product-item__btn">Подробнее</button>
-
-		</div>
-	</div>
-</a>
-{% endmacro %}
-
-{% macro productItemSmall(class) %}
-<a href="#" class="product-item product-item--small" itemscope itemtype="http://schema.org/Product">
-	<div class="product-item__img">
-		<img src="img/products/atlas/small/1.png" alt="Атлас дюпон" itemprop="image">
-	</div>
-	<div class="product-item__desc">
-		<h5 class="h5 product-item__title" itemprop="name">Атлас дюпон
-			<span>white</span>
-		</h5>
-		<div class="product-item__price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-			<meta itemprop="price" content="300.00">
-			<meta itemprop="priceCurrency" content="RUB" /> 300
-			<i class="rub">руб.</i>
-		</div>
-	</div>
-</a>
-{% endmacro %}
-
-{% macro productItemColor(class) %}
-<a href="#" class="product-item product-item--small product-item--color" itemscope itemtype="http://schema.org/Product">
-	<div class="product-item__img">
-		<img src="img/products/atlas/small/3.png" alt="Черный цвет" itemprop="image">
-	</div>
-	<div class="product-item__desc">
-		<h5 class="h5 product-item__title" itemprop="name">Черный</h5>
-	</div>
-</a>
-{% endmacro %}
-
-{% macro lkSidebar(class) %}
-<!-- begin lk__sidebar -->
-<sidebar class="lk__sidebar js-stiky-block">
-	<nav class="lk-nav lk__nav stiky-block__inner">
-		<ul class="lk-nav__list">
-			<li class="lk-nav__item">
-				<a href="lk-order.html" class="lk-nav__link lk-nav__link--order">
-					Заказы
-				</a>
-			</li>
-			<li class="lk-nav__item">
-				<a href="lk-favorits.html" class="lk-nav__link lk-nav__link--fav">
-					Избранное
-				</a>
-			</li>
-			<li class="lk-nav__item">
-				<a href="lk-data.html" class="lk-nav__link lk-nav__link--data">
-					Личные данные
-				</a>
-			</li>
-			<li class="lk-nav__item">
-				<a href="javascript:void(0)"  data-toggle="modal" class="lk-nav__link lk-nav__link--exit">
-					Выйти
-				</a>
-			</li>
-		</ul>
-	</nav>
-</sidebar>
-<!-- end lk__sidebar -->
-{% endmacro %}
