--- a/src/templates/partials/header/_header.html
+++ b/src/templates/partials/header/_header.html
@@ -115,7 +115,7 @@
 			</div>
 		</div><!-- end header__bottom -->
 
-		{% include "../_menu.html" %}
+		{% include "partials/header/_menu.html" %}
 	</div>
 
 </header><!-- end header -->
