--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -1,10 +1,13 @@
-@import "buttons";
-@import "input";
-@import "select";
-@import "tooltip";
-@import "dropdown";
-@import "checkbox";
 @import "accordeon";
-@import "slider";
-@import "form";
+@import "buttons";
+@import "breadcrumbs";
+@import "checkbox";
+@import "dropdown";
+@import "input";
+@import "pagination";
 @import "pushup";
+@import "select";
+// @import "star-rating";
+@import "slider";
+@import "tab";
+@import "tooltip";
