--- a/src/sass/pages/_catalog.scss
+++ b/src/sass/pages/_catalog.scss
@@ -1023,28 +1023,28 @@
 		align-items: flex-end;
 
 		&::after {
-			content: '';
+			content: "";
 			display: block;
 			width: 100%;
 			height: 2px;
 			margin: 0 3px 4px;
-			background-color: rgba(232,232,232, .8);
-			transition: backgroud-color .3s;
+			background-color: rgba(232, 232, 232, 0.8);
+			transition: backgroud-color 0.3s;
 		}
 
 		&:first-child {
-			&::after{
+			&::after {
 				margin-left: 6px;
 			}
 		}
 		&:last-child {
-			&::after{
+			&::after {
 				margin-right: 6px;
 			}
 		}
 
 		&:hover {
-			&::after{
+			&::after {
 				background-color: $color-accent;
 			}
 			.product-slider {
