--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -65,7 +65,7 @@ changer:
 				<!-- begin product-item -->
 				<div class="product-item__wrap">
 					{% for i in range(0, 10) %}
-						{{ item.productItem() }}
+						{% include "partials/product/_product.html" %}
 					{% endfor %}
 				</div><!-- end product-item -->
 
@@ -77,30 +77,7 @@ changer:
 				<!-- begin catalog-content__btn -->
 				<button class="button button--transparent button--accent catalog-content__btn">Показать еще</button><!-- end catalog-content__btn -->
 
-				<!-- begin pagination -->
-				<div class="pagination">
-					<ul class="pagination__list">
-						<li class="pagination__item">
-							<a class="pagination__link" href="#">
-								<i class="fal fa-angle-left pagination__icon"></i>
-							</a>
-						</li>
-						<li class="pagination__item">
-							<a class="pagination__link" href="#">1</a>
-						</li>
-						<li class="pagination__item is-active">
-							<a class="pagination__link" href="#">2</a>
-						</li>
-						<li class="pagination__item">
-							<a class="pagination__link" href="#">3</a>
-						</li>
-						<li class="pagination__item">
-							<a class="pagination__link" href="#">
-								<i class="fal fa-angle-right pagination__icon"></i>
-							</a>
-						</li>
-					</ul>
-				</div><!-- end pagination -->
+				{% include "partials/components/_pagination.html" %}
 
 				<!-- begin catalog-content__empty -->
 				<div class="catalog-content__empty" style="display: none;">
