card slider fix & product-item badge fix

--- a/src/templates/partials/product/_product.html
+++ b/src/templates/partials/product/_product.html
@@ -1,9 +1,11 @@
 <!-- begin product-item -->
 <a href="#" class="product-item js-product-item" itemscope itemtype="http://schema.org/Product">
 
-	<span class="product-item__badge sale">-32%</span>
-	<span class="product-item__badge new">New</span>
-	<span class="product-item__badge hit">Хит</span>
+	<div class="badge__wrap product-item__badge">
+		<span class="badge sale">-32%</span>
+		<span class="badge new">New</span>
+		<span class="badge hit">Хит</span>
+	</div>
 
 	<!-- begin product-item__img -->
 	<div class="product-item__img">
