--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -274,6 +274,16 @@ body{
 .policy {
 	font-family: $f-light;
 	font-size: 14px;
+
+	&__text{
+		display: block;
+		margin-bottom: 5px;
+	}//.policy__text
+
+	&__error{
+		font-size: 13px;
+		color: $color-danger;
+	}//.policy__error
 	a {
 		color: $color-info;
 		&:hover{text-decoration: underline;}
