--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -55,17 +55,17 @@ title: Атлас дюпон «izumrud»
 							<span class="item-select__title">Темно зеленый</span>
 						</div>
 						<div class="item-select__list">
-							<div class="item-select__item">
+							<div class="item-select__item js-item-select-item">
 								<span class="item-select__color" data-item-select-color="#233e23"></span>
 								<span class="item-select__title">Темно зеленый</span>
 								<span class="item-select__subtitle stock">в наличии</span>
 							</div>
-							<div class="item-select__item">
+							<div class="item-select__item js-item-select-item">
 								<span class="item-select__color" data-item-select-color="#46358d"></span>
 								<span class="item-select__title">Темно синий</span>
 								<span class="item-select__subtitle ends">заканчивается</span>
 							</div>
-							<div class="item-select__item">
+							<div class="item-select__item js-item-select-item">
 								<span class="item-select__color" data-item-select-color="#e4d8cb"></span>
 								<span class="item-select__title">Бежевый</span>
 								<span class="item-select__subtitle stock">в наличии</span>
@@ -81,22 +81,22 @@ title: Атлас дюпон «izumrud»
 							<div class="item-select__control item-select__control--plus js-item-select-control--plus"></div>
 						</div>
 						<div class="item-select__list">
-							<div class="item-select__item item-select__item--header">
+							<div class="item-select__item item-select__item--header js-item-select-item">
 								<span class="item-select__title">Купить от:</span>
 								<span class="item-select__subtitle">Цена за метр:</span>
 							</div>
-							<div class="item-select__item">
+							<div class="item-select__item js-item-select-item">
 								<span class="item-select__title">1 м</span>
 								<span class="item-select__subtitle">340,00 руб.</span>
 							</div>
-							<div class="item-select__item">
+							<div class="item-select__item js-item-select-item">
 								<div class="item-select__title_wrap">
 									<span class="item-select__title">15 м </span>
 									<span class="item-select__title_desc">(рулон)</span>
 								</div>
 								<span class="item-select__subtitle">4 335,00 руб. <span>-15%</span></span>
 							</div>
-							<div class="item-select__item">
+							<div class="item-select__item js-item-select-item">
 								<div class="item-select__title_wrap">
 									<span class="item-select__title">150 м</span>
 									<span class="item-select__title_desc">(10 рулонов)</span>
@@ -168,7 +168,7 @@ title: Атлас дюпон «izumrud»
 
 			<div class="tab js-card-tab-related">
 				<ul class="tab__titles">
-					<li class="tab__title">
+					<li class="tab__title js-related-tab">
 						<a class="tab__link" href="#related-tabs-1">
 							<span class="tab__icon_wrap">
 								{{ mixin.icon('cloth', 'tab__icon') }}
@@ -176,7 +176,7 @@ title: Атлас дюпон «izumrud»
 							<span class="tab__text">Ткани</span>
 						</a>
 					</li>
-					<li class="tab__title">
+					<li class="tab__title js-related-tab">
 						<a class="tab__link" href="#related-tabs-2">
 							<span class="tab__icon_wrap">
 								<img class="tab__icon" src="img/general/thread.svg" alt="Нитки">
@@ -184,19 +184,19 @@ title: Атлас дюпон «izumrud»
 							<span class="tab__text">Нитки</span>
 						</a>
 					</li>
-					<li class="tab__title">
+					<li class="tab__title js-related-tab">
 						<a class="tab__link" href="#related-tabs-3">
 							<span class="tab__icon_wrap">{{mixin.icon('button', 'tab__icon')}}</span>
 							<span class="tab__text">Пуговицы <br>и кнопки</span>
 						</a>
 					</li>
-					<li class="tab__title">
+					<li class="tab__title js-related-tab">
 						<a class="tab__link" href="#related-tabs-4">
 							<span class="tab__icon_wrap">{{mixin.icon('zipper', 'tab__icon')}}</span>
 							<span class="tab__text">Молнии</span>
 						</a>
 					</li>
-					<li class="tab__title">
+					<li class="tab__title js-related-tab">
 						<a class="tab__link" href="#related-tabs-5">
 							<span class="tab__icon_wrap">
 								<img class="tab__icon" src="img/general/elastic.svg" alt="Резинки">
@@ -204,7 +204,7 @@ title: Атлас дюпон «izumrud»
 							<span class="tab__text">Резинки</span>
 						</a>
 					</li>
-					<li class="tab__title">
+					<li class="tab__title js-related-tab">
 						<a class="tab__link" href="#related-tabs-6">
 							<span class="tab__icon_wrap">{{mixin.icon('tapes', 'tab__icon')}}</span>
 							<span class="tab__text">Ленты <br> отделочные</span>
