--- a/src/templates/partials/_popup.html
+++ b/src/templates/partials/_popup.html
@@ -142,17 +142,17 @@
 										<span class="item-select__title">Темно зеленый</span>
 									</div>
 									<div class="item-select__list">
-										<div class="item-select__item">
+										<div class="item-select__item js-item-select-item">
 											<span class="item-select__color" data-item-select-color="#233e23"></span>
 											<span class="item-select__title">Темно зеленый</span>
 											<span class="item-select__subtitle stock">в наличии</span>
 										</div>
-										<div class="item-select__item">
+										<div class="item-select__item js-item-select-item">
 											<span class="item-select__color" data-item-select-color="#46358d"></span>
 											<span class="item-select__title">Темно синий</span>
 											<span class="item-select__subtitle ends">заканчивается</span>
 										</div>
-										<div class="item-select__item">
+										<div class="item-select__item js-item-select-item">
 											<span class="item-select__color" data-item-select-color="#e4d8cb"></span>
 											<span class="item-select__title">Бежевый</span>
 											<span class="item-select__subtitle stock">в наличии</span>
@@ -168,15 +168,15 @@
 										<div class="item-select__control item-select__control--plus js-item-select-control--plus"></div>
 									</div>
 									<div class="item-select__list">
-										<div class="item-select__item item-select__item--header">
+										<div class="item-select__item item-select__item--header js-item-select-item">
 											<span class="item-select__title">Купить от:</span>
 											<span class="item-select__subtitle">Цена за метр:</span>
 										</div>
-										<div class="item-select__item">
+										<div class="item-select__item js-item-select-item">
 											<span class="item-select__title">1 м</span>
 											<span class="item-select__subtitle">340,00 руб.</span>
 										</div>
-										<div class="item-select__item">
+										<div class="item-select__item js-item-select-item">
 											<div class="item-select__title_wrap">
 												<span class="item-select__title">15 м </span>
 												<span class="item-select__title_desc">(рулон)</span>
@@ -185,7 +185,7 @@
 												<span>-15%</span>
 											</span>
 										</div>
-										<div class="item-select__item">
+										<div class="item-select__item js-item-select-item">
 											<div class="item-select__title_wrap">
 												<span class="item-select__title">150 м</span>
 												<span class="item-select__title_desc">(10 рулонов)</span>
@@ -262,6 +262,119 @@
 						<!-- end card__desc -->
 					</div>
 					<!-- end card__wrap -->
+
+					<!-- begin card__related -->
+					<div class="card__related related">
+
+						<h2 class="h2 page-title">Сопутствующие товары</h2>
+
+						<div class="tab js-card-tab-related">
+							<ul class="tab__titles">
+								<li class="tab__title js-related-tab">
+									<a class="tab__link" href="#related-tabs-1">
+										<span class="tab__icon_wrap">
+											{{ mixin.icon('cloth', 'tab__icon') }}
+										</span>
+										<span class="tab__text">Ткани</span>
+									</a>
+								</li>
+								<li class="tab__title js-related-tab">
+									<a class="tab__link" href="#related-tabs-2">
+										<span class="tab__icon_wrap">
+											<img class="tab__icon" src="img/general/thread.svg" alt="Нитки">
+										</span>
+										<span class="tab__text">Нитки</span>
+									</a>
+								</li>
+								<li class="tab__title js-related-tab">
+									<a class="tab__link" href="#related-tabs-3">
+										<span class="tab__icon_wrap">{{mixin.icon('button', 'tab__icon')}}</span>
+										<span class="tab__text">Пуговицы <br>и кнопки</span>
+									</a>
+								</li>
+								<li class="tab__title js-related-tab">
+									<a class="tab__link" href="#related-tabs-4">
+										<span class="tab__icon_wrap">{{mixin.icon('zipper', 'tab__icon')}}</span>
+										<span class="tab__text">Молнии</span>
+									</a>
+								</li>
+								<li class="tab__title js-related-tab">
+									<a class="tab__link" href="#related-tabs-5">
+										<span class="tab__icon_wrap">
+											<img class="tab__icon" src="img/general/elastic.svg" alt="Резинки">
+										</span>
+										<span class="tab__text">Резинки</span>
+									</a>
+								</li>
+								<li class="tab__title js-related-tab">
+									<a class="tab__link" href="#related-tabs-6">
+										<span class="tab__icon_wrap">{{mixin.icon('tapes', 'tab__icon')}}</span>
+										<span class="tab__text">Ленты <br> отделочные</span>
+									</a>
+								</li>
+							</ul>
+							<div class="tab__contentes">
+								<div class="tab__content" id="related-tabs-1">
+
+									<div class="bz-slider bz-slider--related">
+										<div class="bz-slider__slides js-bz-slider--related">
+											{% for i in range(0, 5) %}
+											<a class="related__item" href="#">
+												<div class="related__img">
+													<img src="http://via.placeholder.com/150x150" alt="Атлас дюпон «izumrud»">
+												</div>
+												<div class="related__desc">
+													<span class="related__title">Нитки <span>dor tak 40/2</span></span>
+													<span class="related__price">12,80 руб</span>
+												</div>
+											</a>
+											{% endfor %}
+										</div>
+									</div>
+
+								</div>
+								<div class="tab__content" id="related-tabs-2">
+
+									<div class="bz-slider bz-slider--related">
+										<div class="bz-slider__slides js-bz-slider--related">
+											{% for i in range(0, 11) %}
+											<a class="related__item" href="#">
+												<div class="related__img">
+													<img src="img/products/thread/{{i+1}}.png" alt="Атлас дюпон «izumrud»">
+												</div>
+												<div class="related__desc">
+													<span class="related__title">Нитки <span>dor tak 40/2</span></span>
+													<span class="related__price">12,80 руб</span>
+												</div>
+											</a>
+											{% endfor %}
+										</div>
+									</div>
+
+								</div>
+								<div class="tab__content" id="related-tabs-3">
+
+									<div class="bz-slider bz-slider--related">
+										<div class="bz-slider__slides js-bz-slider--related">
+											{% for i in range(0, 11) %}
+											<a class="related__item" href="#">
+												<div class="related__img">
+													<img src="img/products/thread/{{i+1}}.png" alt="Атлас дюпон «izumrud»">
+												</div>
+												<div class="related__desc">
+													<span class="related__title">Нитки <span>dor tak 40/2</span></span>
+													<span class="related__price">12,80 руб</span>
+												</div>
+											</a>
+											{% endfor %}
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+
+					</div><!-- end card__related -->
 
 					<!-- begin card__colors -->
 					<div class="card__colors">
