--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -212,7 +212,7 @@ title: Атлас дюпон «izumrud»
 					</li>
 				</ul>
 				<div class="tab__contentes">
-					<div class="tab__content" id="related-tabs-1">
+					<div id="related-tabs-1">
 
 						<div class="bz-slider bz-slider--related">
 							<div class="bz-slider__slides js-bz-slider--related">
@@ -231,7 +231,7 @@ title: Атлас дюпон «izumrud»
 						</div>
 
 					</div>
-					<div class="tab__content" id="related-tabs-2">
+					<div id="related-tabs-2">
 
 						<div class="bz-slider bz-slider--related">
 							<div class="bz-slider__slides js-bz-slider--related">
@@ -250,7 +250,7 @@ title: Атлас дюпон «izumrud»
 						</div>
 
 					</div>
-					<div class="tab__content" id="related-tabs-3">
+					<div id="related-tabs-3">
 
 						<div class="bz-slider bz-slider--related">
 							<div class="bz-slider__slides js-bz-slider--related">
